# dirslint

./: Cargo.toml  LICENSE  README.md
npm/dirslint/: package.json
npm/dirslint-darwin-arm64/: package.json
npm/dirslint/lib/: index.js
src/: cli.rs  glob.rs  linter.rs  main.rs  test.yml  yml.rs  yml_parser.rs
src/mock/: test.yml
