[package]
name = "dslint"
authors = ["Jiman Jeong"]
description = "Directory Structure Lint"
repository = "https://github.com/jjm2317/dslint"
version = "0.0.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
